--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Pasmal</h1>
           <h2 id="project_tagline">playing with git pages and custom domains</h2>
-
+		  <p>Oui oui!</p>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/beNorton/pasmal/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/beNorton/pasmal/tarball/master">Download this project as a tar.gz file</a>
